trying to fix ship height issues on mobile

--- a/global-style.css
+++ b/global-style.css
@@ -25,7 +25,6 @@ body {
     background: linear-gradient(var(--primary-color), var(--secondary-color));
     color: var(--offwhite);
     width: 100vw;
-    min-height: -webkit-fill-available;
     height: 100vh;
 }
 
@@ -155,7 +154,7 @@ body {
     z-index: 1;
     top: -2.7rem;
     left:50%;
-    transform: translateX(-50%) translateY(-5%);
+    transform: translateX(-50%);
     
     width: 14rem;
     height: 6rem;
